--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@genesys/ixn-node-client": "git+ssh://git@git.scm.genesys.com:Genesys/ixn-node-client.git",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "pg": "^8.5.1",
