--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,7 @@
 
 version: 2
 registries:
-  @genesys/ixn-node-client:
+  Genesys/ixn-node-client:
     type: git
     url: https://git.scm.genesys.com/
     username: relankum
@@ -16,5 +16,7 @@ updates:
     # Look for `package.json` and `lock` files in the `root` directory
     directory: "/"
     # Check the npm registry for updates every day (weekdays)
+    registries:
+      - Genesys/ixn-node-client
     schedule:
       interval: "daily"
