--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,6 +17,6 @@ updates:
     directory: "/"
     # Check the npm registry for updates every day (weekdays)
     registries:
-      - Genesys/ixn-node-client
+      - genesys/ixn-node-client
     schedule:
       interval: "daily"
